fixed spacing and added the contact me section

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -28,7 +28,7 @@ body {
 
 /* Paragraph & Typographic */
 p {
-    line-height: 50px;
+    line-height: normal;
     margin-bottom: 25px;
 }
 
@@ -194,6 +194,7 @@ a:after {
 	padding-top: 60px;
 	padding-bottom: 60px;
 	color: white;
+  text-align: center;
 }
 
 #intro h5, p {
@@ -302,4 +303,69 @@ a:after {
 
 sm {
 	font-size: 12px;
+}
+
+section#contact {
+    /*background-color: #222;
+    background-position: ;
+    background-repeat: no-repeat;
+    background-size: cover;*/
+}
+
+section#contact .section-heading {
+    color: #fff;
+}
+
+section#contact .form-group {
+    margin-bottom: 25px;
+}
+
+section#contact .form-group input,
+section#contact .form-group textarea {
+    padding: 20px;
+}
+
+section#contact .form-group input.form-control {
+    height: auto;
+}
+
+section#contact .form-group textarea.form-control {
+    height: 236px;
+}
+
+section#contact .form-control:focus {
+    border-color: #fed136;
+    box-shadow: none;
+}
+
+section#contact::-webkit-input-placeholder {
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    color: #bbb;
+}
+
+section#contact:-moz-placeholder {
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    color: #bbb;
+}
+
+section#contact::-moz-placeholder {
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    color: #bbb;
+}
+
+section#contact:-ms-input-placeholder {
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    color: #bbb;
+}
+
+section#contact .text-danger {
+    color: #e74c3c;
 }
